--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en" dir="ltr">
     <head>
-        <title>My Boilerplate</title>
+        <title>royu root</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="royufedbp" content="My FrontEnd Boilerplate">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <style>                    
             body{                
                 margin: 0;       
