--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>auth clone page</title>
-    <link rel="icon" type="image/png/ico" href="../images/favicon.ico" />
+    <link rel="icon" type="image/png/ico" href="./favicon.ico" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="authclone" content="authclone">
