--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,44 +13,39 @@
             margin: 0;
             display: flex;
             justify-content: center;
+            background: rgba(0, 0, 0, 0.1);
             font-family: "Segoe UI";
         }
 
         #app {
             height: 100vh;
+            display: flex;
         }
 
         .root {
-            width: 100%;
             display: flex;
+            position: relative;
+            top: 25%;
             flex-direction: column;
+            align-items: center;
         }
 
 
         @media screen and (max-width: 320px) {
             #app {
-                max-width: 320px;
                 width: 100%;
             }
         }
 
         @media screen and (max-width: 768px) {
             #app {
-                max-width: 768px;
                 width: 100%;
             }
         }
 
         @media screen and (max-width: 1024px) {
             #app {
-                max-width: 1024px;
                 width: 100%;
-            }
-        }
-
-        @media screen and (min-width: 1024px) {
-            #app {
-                width: 1024px;
             }
         }
     </style>
