--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             display: flex;
             justify-content: center;
-            background: rgba(0, 0, 0, 0.1);
+            background: #F9f9f9;
             font-family: "Segoe UI";
         }
 
